fix: properly center align post info onhover

--- a/resources/js/components/Posts/GridView/PhotoGrid/styles.scss
+++ b/resources/js/components/Posts/GridView/PhotoGrid/styles.scss
@@ -72,12 +72,17 @@
                     left: 50%;
                     color: #fff;
                     font-size: 88%;
+                    width: 100%;
                     transform: translate(-50%, -50%);
 
                     p {
-                        margin: 4px;
-                        display: inline-block;
+                        display: block;
+                        padding: 0;
                         vertical-align: middle;
+
+                        &:first-child {text-align: right;}
+                        &.hidden {max-width: 20px !important;}
+                        &:last-child {text-align: left;}
                     }
                 }
 
